tests/cases/smoke/invalid/record_construction_missing_field.ty
record Animal {
    name: str
    speak: () -> none
}

func talk() -> none {
    return none
}

const A = Animal {
    name: "n"
}
